# newhotkey

./: .gitignore  CMakeLists.txt  Makefile  README.md  alembic_memo.txt  api.md  architech-memo.txt  build.bat  build_iwyu.bat  build_vs.bat  docker-compose.yml  hot_reload_memo.txt  hotkey.cpp  hotkeys.txt  hotstring.cpp  package_memo.txt  wsl_memo.txt
.devcontainer/: devcontainer.json
CLI/: CMakeLists.txt  Dockerfile
CLI/data/: hotkeys.txt
data/: hotkeys.txt  vkmap_grouped.json  vkmap_grouped_numeric.json  vkmaps.txt
devModule/: hotstring.cpp
include/: ActionFuncs.hpp  FileAccess.hpp  HRKMapFileSource.hpp  HotkeyActionFuncs.hpp  HotkeyAndRemapMapLoader.hpp  KeyLogger.hpp  KeyMapLoader.hpp  KeyboardHookManager.hpp  KeystringActionFuncs.hpp  Logger.hpp  RemapActionFuncs.hpp  Types.hpp  Utils.hpp
server/: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  client.py  curl.bat  curl.sh  db_memo.txt  main.py  requirements.txt  server.py  test.py  usage.txt
src/: ActionFuncs.cpp  FileAccess.cpp  HRKMapFileSource.cpp  HotkeyActionFuncs.cpp  HotkeyAndRemapMapLoader.cpp  KeyLogger.cpp  KeyMapLoader.cpp  KeyboardHookManager.cpp  KeystringActionFuncs.cpp  LogConfigLoader.cpp  Logger.cpp  PathManager.cpp  RemapActionFuncs.cpp  Utils.cpp  hotkey.cpp  main.cpp
study_memo/: alembic_memo.txt  awsinit_memo.txt  dns_memo.txt  docker_memo.txt  dockerfile_memo.txt  git_memo.txt  nextjs_memo.txt  nginx_memo.txt  query_sample_memo.txt  server_usage.txt  systemd_memo.txt  tailwind_memo.txt  typescript_memo.txt  wsl_memo.txt
web/: .dockerignore  .gitignore  Dockerfile  Next-js.bat  loguser3.db  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+105 files in other folders)
